--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-	"name": "tar-stream",
-	"version": "0.0.1",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "Markus Felten <markus.felten@gmx.de>",
-	"license": "ISC",
-	"dependencies": {
-		"tar-stream": "^1.1.2"
-	}
+  "name": "tar-stream",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Markus Felten <markus.felten@gmx.de>",
+  "license": "ISC",
+  "dependencies": {
+    "service-manager": "git+ssh://donkey@mfelten.de/Groups/donkey/git/service-manager.git",
+    "tar-stream": "^1.1.2"
+  }
 }
