--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "mocha test/*.js"
 	},
 	"author": "Markus Felten <markus.felten@gmx.de>",
-	"license": "ISC",
+	"license": "BSD-2-Clause",
 	"dependencies": {
 		"kronos-service-manager": "git+ssh://donkey@mfelten.de/Groups/donkey/git/kronos-service-manager.git",
 		"tar-stream": "^1.1.2"
