--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "kronos-service-manager": "git+ssh://donkey@mfelten.de/Groups/donkey/git/kronos-service-manager.git",
-    "tar-stream": "1.2.1"
+    "tar-stream": "1.2.1",
+    "log4js": "^0.6.24"
   },
   "devDependencies": {
     "mocha": "2.2.5"
