--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "Markus Felten <markus.felten@gmx.de>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "tar-stream": "1.2.1",
-    "log4js": "^0.6.24"
+    "tar-stream": "1.2.1"
   },
   "devDependencies": {
     "kronos-service-manager": "git+ssh://donkey@mfelten.de/Groups/donkey/git/kronos-service-manager.git",
