--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "flow step to tar/untar streams",
   "main": "index.js",
   "scripts": {
+    "cover": "node --harmony ./node_modules/istanbul-harmony/lib/cli.js cover --hook-run-in-context ./node_modules/mocha/bin/_mocha -- --R spec --U exports test",
+    "doc": "./node_modules/.bin/jsdoc lib/*.js",
     "test": "mocha test/*.js"
   },
   "author": "Markus Felten <markus.felten@gmx.de>",
@@ -17,6 +19,8 @@
     "chai": "3.2.0",
     "chai-as-promised": "5.1.0",
     "mocha": "2.2.5",
+    "istanbul-harmony": "0.3.16",
+    "jsdoc": "^3.3.2",
     "kronos-service-manager": "git+ssh://donkey@mfelten.de/Groups/donkey/git/kronos-service-manager.git"
   },
   "_peerDependencies": {
