--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "devDependencies": {
     "chai": "3.2.0",
     "chai-as-promised": "5.1.0",
-    "mocha": "2.2.5",
     "istanbul-harmony": "0.3.16",
     "jsdoc": "^3.3.2",
     "kronos-service-manager": "git+ssh://donkey@mfelten.de/Groups/donkey/git/kronos-service-manager.git",
+    "mocha": "^2.3.0",
     "mocha-html-reporter": "^0.0.1"
   },
   "_peerDependencies": {
@@ -31,5 +31,8 @@
   "repository": {
     "type": "git",
     "url": "ssh://donkey@mfelten.de/Groups/donkey/git/kronos-step-archive-tar.git"
+  },
+  "engines": {
+    "iojs": ">=2.0.0"
   }
 }
