--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "url": "ssh://donkey@mfelten.de/Groups/donkey/git/kronos-step-archive-tar.git"
   },
   "engines": {
-    "iojs": ">=2.0.0"
+    "node": ">=4.0.0"
   }
 }
