--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
     "test": "mocha --harmony test/*.js",
     "ci-test-report": "mocha --harmony --reporter mocha-html-reporter test/*.js"
   },
-  "author": "Markus Felten <markus.felten@gmx.de>",
+  "contributors": [{
+    "name": "Torsten Link",
+    "email": "torstenlink@gmx.de"
+  }, {
+    "name": "Markus Felten",
+    "email": "markus.felten@gmx.de"
+  }],
   "license": "BSD-2-Clause",
   "dependencies": {
-    "tar-stream": "1.2.1"
+    "tar-stream": "1.2.1",
+    "kronos-step": "git+ssh://donkey@mfelten.de/Groups/donkey/git/kronos-step.git"
   },
   "devDependencies": {
     "chai": "3.2.0",
     "chai-as-promised": "5.1.0",
     "istanbul-harmony": "0.3.16",
     "jsdoc": "^3.3.2",
-    "kronos-service-manager": "git+ssh://donkey@mfelten.de/Groups/donkey/git/kronos-service-manager.git",
     "mocha": "^2.3.2",
-    "mocha-html-reporter": "^0.0.1"
-  },
-  "_peerDependencies": {
-    "kronos-service-manager": "git+ssh://donkey@mfelten.de/Groups/donkey/git/kronos-service-manager.git"
+    "mocha-html-reporter": "^0.0.1",
+    "scope-reporter": "^2.1.0"
   },
   "repository": {
     "type": "git",
