--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "flow step to tar/untar streams",
   "main": "index.js",
   "scripts": {
-    "cover": "node --harmony ./node_modules/istanbul-harmony/lib/cli.js cover --hook-run-in-context ./node_modules/mocha/bin/_mocha -- --R spec --U exports test",
+    "cover": "node --harmony ./node_modules/istanbul/lib/cli.js cover --hook-run-in-context ./node_modules/mocha/bin/_mocha -- --R spec --U exports test",
     "doc": "./node_modules/.bin/jsdoc lib/*.js",
     "test": "mocha --harmony test/*.js",
-    "ci-test-report": "mocha --harmony --reporter mocha-html-reporter test/*.js"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "contributors": [{
     "name": "Torsten Link",
@@ -20,22 +20,23 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "tar-stream": "1.2.1",
-    "kronos-step": "https://github.com/Kronos-Integration/kronos-step.git"
+    "kronos-step": "2.6.0"
   },
   "devDependencies": {
     "chai": "3.2.0",
     "chai-as-promised": "5.1.0",
-    "istanbul-harmony": "0.3.16",
+    "istanbul": "0.4.0",
     "jsdoc": "^3.3.2",
     "mocha": "^2.3.2",
     "mocha-html-reporter": "^0.0.1",
-    "scope-reporter": "^2.1.0"
+    "kronos-test-step": "1.1.0",
+    "semantic-release": "6.0.3"
   },
   "repository": {
     "type": "git",
-    "url": "ssh://donkey@mfelten.de/Groups/donkey/git/kronos-step-archive-tar.git"
+    "url": "git+https://github.com/Kronos-Integration/kronos-step-archive-tar.git"
   },
   "engines": {
-    "node": ">=4.1.2"
+    "node": ">=4.2.1"
   }
 }
