--- a/package.json
+++ b/package.json
@@ -10,26 +10,29 @@
     "test": "mocha --harmony test/*.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
-  "contributors": [{
-    "name": "Torsten Link",
-    "email": "torstenlink@gmx.de"
-  }, {
-    "name": "Markus Felten",
-    "email": "markus.felten@gmx.de"
-  }],
+  "contributors": [
+    {
+      "name": "Torsten Link",
+      "email": "torstenlink@gmx.de"
+    },
+    {
+      "name": "Markus Felten",
+      "email": "markus.felten@gmx.de"
+    }
+  ],
   "license": "BSD-2-Clause",
   "dependencies": {
-    "tar-stream": "1.2.1",
-    "kronos-step": "2.7.0"
+    "kronos-step": "2.7.0",
+    "tar-stream": "1.3.1"
   },
   "devDependencies": {
-    "chai": "3.2.0",
+    "chai": "3.4.1",
     "chai-as-promised": "5.1.0",
     "istanbul": "0.4.0",
-    "jsdoc": "^3.3.2",
-    "mocha": "^2.3.2",
-    "mocha-html-reporter": "^0.0.1",
+    "jsdoc": "3.4.0",
     "kronos-test-step": "1.1.0",
+    "mocha": "2.3.4",
+    "mocha-html-reporter": "^0.0.1",
     "semantic-release": "6.0.3"
   },
   "repository": {
