--- a/package.json
+++ b/package.json
@@ -10,16 +10,13 @@
     "test": "mocha --harmony test/*.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
-  "contributors": [
-    {
-      "name": "Torsten Link",
-      "email": "torstenlink@gmx.de"
-    },
-    {
-      "name": "Markus Felten",
-      "email": "markus.felten@gmx.de"
-    }
-  ],
+  "contributors": [{
+    "name": "Torsten Link",
+    "email": "torstenlink@gmx.de"
+  }, {
+    "name": "Markus Felten",
+    "email": "markus.felten@gmx.de"
+  }],
   "license": "BSD-2-Clause",
   "dependencies": {
     "kronos-step": "2.7.1",
@@ -32,7 +29,6 @@
     "jsdoc": "3.4.0",
     "kronos-test-step": "1.1.0",
     "mocha": "2.3.4",
-    "mocha-html-reporter": "^0.0.1",
     "semantic-release": "6.0.3"
   },
   "repository": {
