--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kronos-step-archive-tar",
-  "tags": "kronos-step",
   "version": "0.0.0",
   "description": "flow step to tar/untar streams",
+  "keywords": ["kronos-step"],
   "main": "index.js",
   "scripts": {
     "cover": "node --harmony ./node_modules/istanbul/lib/cli.js cover --hook-run-in-context ./node_modules/mocha/bin/_mocha -- --R spec --U exports tests",
