--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "license": "BSD-2-Clause",
   "dependencies": {
-    "kronos-step": "3.3.0",
+    "kronos-step": "^3.3.0",
     "tar-stream": "1.3.1"
   },
   "devDependencies": {
@@ -32,7 +32,7 @@
     "chai-as-promised": "5.2.0",
     "istanbul": "0.4.1",
     "jsdoc": "3.4.0",
-    "kronos-test-step": "2.9.1",
+    "kronos-test-step": "^2.9.1",
     "mocha": "2.3.4",
     "semantic-release": "6.0.3"
   },
