--- a/package.json
+++ b/package.json
@@ -12,19 +12,16 @@
     "test": "mocha tests/*.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
-  "contributors": [
-    {
-      "name": "Torsten Link",
-      "email": "torstenlink@gmx.de"
-    },
-    {
-      "name": "Markus Felten",
-      "email": "markus.felten@gmx.de"
-    }
-  ],
+  "contributors": [{
+    "name": "Torsten Link",
+    "email": "torstenlink@gmx.de"
+  }, {
+    "name": "Markus Felten",
+    "email": "markus.felten@gmx.de"
+  }],
   "license": "BSD-2-Clause",
   "dependencies": {
-    "kronos-step": "^3.9.0",
+    "kronos-step": "^4.0.1",
     "tar-stream": "1.3.1"
   },
   "devDependencies": {
@@ -33,16 +30,17 @@
     "cz-conventional-changelog": "^1.1.5",
     "istanbul": "0.4.2",
     "jsdoc": "3.4.0",
-    "kronos-test-step": "^2.10.0",
+    "kronos-service-manager": "^3.2.0",
+    "kronos-test-step": "^3.0.0",
     "mocha": "2.4.5",
-    "semantic-release": "6.0.3"
+    "semantic-release": "6.2.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Kronos-Integration/kronos-step-archive-tar.git"
   },
   "engines": {
-    "node": ">=4.2.1"
+    "node": ">=5"
   },
   "config": {
     "commitizen": {
