--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "license": "BSD-2-Clause",
   "dependencies": {
-    "kronos-step": "^5.1.2",
+    "kronos-step": "5.1.3",
     "tar-stream": "1.3.2"
   },
   "devDependencies": {
@@ -33,8 +33,8 @@
     "cz-conventional-changelog": "^1.1.5",
     "istanbul": "0.4.2",
     "jsdoc": "3.4.0",
-    "kronos-service-manager": "3.2.13",
-    "kronos-test-step": "^3.0.3",
+    "kronos-service-manager": "3.2.14",
+    "kronos-test-step": "3.1.0",
     "mocha": "2.4.5",
     "semantic-release": "6.2.1"
   },
