--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "license": "BSD-2-Clause",
   "dependencies": {
+    "kronos-endpoint": "^2.4.0",
     "kronos-step": "5.1.4",
     "tar-stream": "1.5.2"
   },
