--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   ],
   "license": "BSD-2-Clause",
   "dependencies": {
-    "kronos-endpoint": "^2.9.0",
-    "kronos-step": "5.2.1",
+    "kronos-endpoint": "^2.9.1",
+    "kronos-step": "^5.2.2",
     "tar-stream": "1.5.2"
   },
   "devDependencies": {
@@ -33,7 +33,7 @@
     "cz-conventional-changelog": "^1.1.6",
     "istanbul": "0.4.3",
     "jsdoc": "3.4.0",
-    "kronos-service-manager": "^3.3.5",
+    "kronos-service-manager": "^3.3.6",
     "kronos-test-step": "3.1.1",
     "mocha": "2.4.5",
     "semantic-release": "6.2.1"
