--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "index.js",
   "scripts": {
     "cover": "node ./node_modules/istanbul/lib/cli.js cover --hook-run-in-context ./node_modules/mocha/bin/_mocha -- --R spec --U exports tests/*_test.js",
-    "doc": "jsdoc lib/*.js",
-    "test": "mocha tests/*_test.js",
+    "doc": "node ./node_modules/.bin/jsdoc lib/*.js",
+    "test": "node ./node_modules/.bin/mocha tests/*_test.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "contributors": [
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "cz-conventional-changelog": "^1.1.6",
+    "cz-conventional-changelog": "1.1.6",
     "istanbul": "0.4.3",
     "jsdoc": "3.4.0",
     "kronos-service-manager": "^3.3.6",
@@ -40,14 +40,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Kronos-Integration/kronos-step-archive-tar.git"
+    "url": "https://github.com/Kronos-Integration/kronos-step-archive-tar.git"
   },
   "engines": {
-    "node": ">=5"
+    "node": ">=6"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Kronos-Integration/kronos-step-archive-tar/issues"
+  },
+  "homepage": "https://github.com/Kronos-Integration/kronos-step-archive-tar#readme"
 }
