--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cover": "./node_modules/istanbul/lib/cli.js cover --hook-run-in-context ./node_modules/mocha/bin/_mocha -- --R spec --U exports tests/*-test.js",
     "doc": "./node_modules/.bin/jsdoc lib/*.js",
     "test": "./node_modules/.bin/mocha tests/*-test.js",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release"
   },
   "contributors": [
     {
@@ -35,15 +35,15 @@
     "jsdoc": "3.5.5",
     "kronos-service-manager": "^3.5.10",
     "kronos-test-step": "^3.1.4",
-    "mocha": "^4.0.1",
-    "semantic-release": "^8.2.0"
+    "mocha": "^3.5.3",
+    "semantic-release": "^9.1.1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Kronos-Integration/kronos-step-archive-tar.git"
   },
   "engines": {
-    "node": ">=8.6.0"
+    "node": ">=8.9.1"
   },
   "bugs": {
     "url": "https://github.com/Kronos-Integration/kronos-step-archive-tar/issues"
