--- a/package.json
+++ b/package.json
@@ -1,21 +1,12 @@
 {
   "name": "kronos-step-archive-tar",
   "version": "0.0.0-semantic-release",
-  "description": "step to tar/untar requests",
-  "keywords": ["kronos-step"],
   "main": "dist/tar.js",
   "module": "src/tar.js",
-  "scripts": {
-    "cover": "nyc --temp-directory build/nyc ava",
-    "test": "ava",
-    "semantic-release": "semantic-release",
-    "precover": "rollup -c tests/rollup.config.js",
-    "pretest": "rollup -c tests/rollup.config.js",
-    "posttest": "npm run prepare && markdown-doctest",
-    "prepare": "rollup -c",
-    "docs": "documentation readme src/tar.js --section=API",
-    "lint": "documentation lint src/tar.js"
-  },
+  "description": "step to tar/untar requests",
+  "keywords": [
+    "kronos-step"
+  ],
   "contributors": [
     {
       "name": "Torsten Link",
@@ -27,6 +18,17 @@
     }
   ],
   "license": "BSD-2-Clause",
+  "scripts": {
+    "cover": "nyc --temp-directory build/nyc ava",
+    "test": "ava",
+    "semantic-release": "semantic-release",
+    "precover": "rollup -c tests/rollup.config.js",
+    "pretest": "rollup -c tests/rollup.config.js",
+    "posttest": "npm run prepare && markdown-doctest",
+    "prepare": "rollup -c",
+    "docs": "documentation readme src/tar.js --section=API",
+    "lint": "documentation lint src/tar.js"
+  },
   "dependencies": {
     "kronos-endpoint": "^2.14.14",
     "kronos-step": "^5.6.4",
@@ -41,24 +43,40 @@
     "nyc": "^11.4.1",
     "ava": "^0.24.0",
     "rollup": "^0.53.0",
-    "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-multi-entry": "^2.0.2",
     "xo": "^0.19.0"
-  },
-  "repository": {
-    "type": "git",
-    "url":
-      "git+https://github.com/Kronos-Integration/kronos-step-archive-tar.git"
   },
   "engines": {
     "node": ">=8.9.3"
   },
-  "bugs": {
-    "url":
-      "https://github.com/Kronos-Integration/kronos-step-archive-tar/issues"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kronos-Integration/kronos-step-archive-tar.git"
   },
-  "homepage":
-    "https://github.com/Kronos-Integration/kronos-step-archive-tar#readme",
+  "bugs": {
+    "url": "https://github.com/Kronos-Integration/kronos-step-archive-tar/issues"
+  },
+  "homepage": "https://github.com/Kronos-Integration/kronos-step-archive-tar#readme",
+  "ava": {
+    "files": [
+      "build/*-test.js"
+    ],
+    "presets": [
+      "env"
+    ],
+    "require": [
+      "babel-register"
+    ]
+  },
+  "nyc": {
+    "include": [
+      "build/*-test.js"
+    ],
+    "reporter": [
+      "lcov"
+    ],
+    "report-dir": "./build/coverage"
+  },
   "xo": {
     "space": true
   },
@@ -66,15 +84,5 @@
     "repository": {
       "url": "https://github.com/arlac77/npm-package-template.git"
     }
-  },
-  "ava": {
-    "files": ["build/*-test.js"],
-    "presets": ["env"],
-    "require": ["babel-register"]
-  },
-  "nyc": {
-    "include": ["build/*-test.js"],
-    "reporter": ["lcov"],
-    "report-dir": "./build/coverage"
   }
 }
