--- a/package.json
+++ b/package.json
@@ -46,14 +46,15 @@
     "markdown-doctest": "^0.9.1",
     "nyc": "^13.1.0",
     "ava": "^1.0.0-beta.8",
-    "rollup": "^0.66.2",
+    "rollup": "^0.66.3",
     "rollup-plugin-multi-entry": "^2.0.2",
-    "travis-deploy-once": "^5.0.8",
+    "travis-deploy-once": "^5.0.9",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-executable": "^1.3.0",
-    "rollup-plugin-cleanup": "^3.0.0"
+    "rollup-plugin-cleanup": "^3.0.0",
+    "rollup-plugin-json": "^3.1.0"
   },
   "engines": {
     "node": ">=10.10"
