--- a/package.json
+++ b/package.json
@@ -66,17 +66,16 @@
   "homepage": "https://github.com/Kronos-Integration/kronos-step-archive-tar#readme",
   "ava": {
     "files": [
-      "build/*-test.js"
+      "tests/*-test.js"
     ],
     "presets": [
       "env"
     ],
     "require": [
-      "babel-register"
-    ]
-  },
-  "xo": {
-    "space": true
+      "esm"
+    ],
+    "babel": false,
+    "compileEnhancements": false
   },
   "template": {
     "repository": {
