chore(scripts): cover@#overwrite c8 --temp-directory build/coverage ava && c8 report -r lcov --temp-directory build/coverage chore(package): add xo from template chore(package): add nyc from template chore(package): set $.ava.require='esm' as in template chore(package): set $.ava.files='tests/*-test.js,tests/*-test.mjs' as in template

--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
   "homepage": "https://github.com/Kronos-Integration/kronos-step-archive-tar#readme",
   "ava": {
     "files": [
-      "tests/*-test.js"
+      "tests/*-test.js",
+      "tests/*-test.mjs"
     ],
     "presets": [
       "env"
