--- a/package.json
+++ b/package.json
@@ -24,12 +24,10 @@
   "scripts": {
     "cover": "c8 --temp-directory build/coverage ava && c8 report -r lcov --temp-directory build/coverage",
     "test": "ava",
-    "semantic-release": "semantic-release",
     "posttest": "npm run prepare && markdown-doctest",
     "prepare": "rollup -c",
     "docs": "documentation readme src/tar.js --section=API",
-    "lint": "documentation lint src/tar.js",
-    "travis-deploy-once": "travis-deploy-once"
+    "lint": "documentation lint src/tar.js"
   },
   "dependencies": {
     "kronos-endpoint": "^2.15.0",
@@ -44,7 +42,6 @@
     "markdown-doctest": "^0.9.1",
     "ava": "^1.0.1",
     "rollup": "^1.0.0",
-    "travis-deploy-once": "^5.0.11",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-executable": "^1.3.0",
