--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "license": "BSD-2-Clause",
   "scripts": {
     "cover": "c8 --temp-directory build/coverage ava && c8 report -r lcov --temp-directory build/coverage",
-    "test": "ava",
+    "docs": "documentation readme src/tar.js --section=API",
+    "lint": "documentation lint src/tar.js",
     "posttest": "npm run prepare && markdown-doctest",
     "prepare": "rollup -c",
-    "docs": "documentation readme src/tar.js --section=API",
-    "lint": "documentation lint src/tar.js"
+    "test": "ava"
   },
   "dependencies": {
     "kronos-endpoint": "^2.15.0",
@@ -35,20 +35,20 @@
     "tar-stream": "1.6.2"
   },
   "devDependencies": {
+    "ava": "^1.0.1",
+    "c8": "^3.2.1",
+    "documentation": "^9.1.1",
+    "esm": "^3.0.84",
     "kronos-service-manager": "^3.5.10",
     "kronos-test-step": "^3.1.4",
-    "semantic-release": "^15.13.2",
-    "documentation": "^9.1.1",
     "markdown-doctest": "^0.9.1",
-    "ava": "^1.0.1",
     "rollup": "^1.0.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-executable": "^1.3.0",
     "rollup-plugin-cleanup": "^3.1.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-executable": "^1.3.0",
     "rollup-plugin-json": "^3.1.0",
-    "c8": "^3.2.1",
-    "esm": "^3.0.84"
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "semantic-release": "^15.13.2"
   },
   "engines": {
     "node": ">=10.15.0"
